@@ -38,7 +38,7 @@ not a destination.
 
 config/routes.rb
 
-  map.open_id_complete 'session', :controller => "session", :action => "create", :requirements => { :method => :get }
+  map.open_id_complete 'session', :controller => "sessions", :action => "create", :requirements => { :method => :get }
   map.resource :session
 
 
@@ -69,8 +69,8 @@ app/views/sessions/new.erb
     </p>
   <% end %>
 
-app/controllers/session_controller.rb
-  class SessionController < ApplicationController
+app/controllers/sessions_controller.rb
+  class SessionsController < ApplicationController
     def create
       if using_open_id?
         open_id_authentication
@@ -91,19 +91,14 @@ app/controllers/session_controller.rb
 
       def open_id_authentication
         authenticate_with_open_id do |result, identity_url|
-          case result
-          when :missing
-            failed_login "Sorry, the OpenID server couldn't be found"
-          when :canceled
-            failed_login "OpenID verification was canceled"
-          when :failed
-            failed_login "Sorry, the OpenID verification failed"
-          when :successful
+          if result.successful?
             if @current_user = @account.users.find_by_identity_url(identity_url)
               successful_login
             else
               failed_login "Sorry, no user by that identity URL exists (#{identity_url})")
             end
+          else
+            failed_login result.message
           end
         end
       end
