@@ -1,8 +1,12 @@
 begin
-  #gem 'ruby-openid'
-  require 'openid'
+  require 'openid'  
 rescue LoadError
-  puts "Install the ruby-openid gem to enable OpenID support"
+  begin
+    gem 'ruby-openid'
+    require 'openid'
+  rescue LoadError
+    puts "Install the ruby-openid gem to enable OpenID support"
+  end
 end
 
 ActionController::Base.send :include, OpenIdAuthentication
