@@ -1,8 +1,22 @@
 module OpenIdAuthentication
   OPEN_ID_AUTHENTICATION_DIR = RAILS_ROOT + "/tmp/openids"
   
-  @@store = :db
-  mattr_accessor :store
+  def self.store
+    @@store
+  end
+  
+  def self.store=(value)
+    @@store = value
+  end
+  
+  self.store = :db
+  
+  def store
+    OpenIdAuthentication.store
+  end
+
+  class InvalidOpenId < StandardError
+  end
 
   class Result
     ERROR_MESSAGES = {
@@ -50,12 +64,12 @@ module OpenIdAuthentication
       url # already normalized
     when %r{^https?://[^/]+$}
       url + "/"
-    when %r{^[.\d\w]+/.*$}
+    when %r{^[.\d\w-]+/.*$}
       "http://" + url
-    when %r{^[.\d\w]+$}
+    when %r{^[.\d\w-]+$}
       "http://" + url + "/"
     else
-      raise "Unable to normalize: #{url}"
+      raise InvalidOpenId.new("#{url} is not an OpenID URL")
     end
   end
 
@@ -130,7 +144,7 @@ module OpenIdAuthentication
     def open_id_redirect_url(open_id_response)
       open_id_response.redirect_url(
         request.protocol + request.host_with_port + "/",
-        open_id_response.return_to("#{request.url}?open_id_complete=1")
+        open_id_response.return_to("#{request.protocol + request.host_with_port + request.path}?open_id_complete=1")
       )     
     end
 
